--- a/light-dark-mode-digital-clock/src/index.css
+++ b/light-dark-mode-digital-clock/src/index.css
@@ -38,10 +38,21 @@
 .btn {
   position: absolute;
   top: 20px;
-  width: 80px;
-  height: 30px;
-  font-weight: bold;
+  width: 120px;
+  height: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: light;
+  font-size: 25px;
   border-radius: 10px;
   border: none;
   color: rgb(42, 40, 40);
+}
+
+.btn div {
+  display: flex;
+  justify-content: center;
+}
+
+.icon {
+  margin: 5px;
 }
